# PCA-SHOT

./: CMakeLists.txt  README.md
PCA_matrices/: ITQ_for_SHOT_100000_samples.txt  ITQ_for_SHOT_100000_samples.txt~  ITQ_for_SHOT_100000_samples_32_dim.txt~  PCA_ITQ_CLOUD77.txt  PCA_for_FPFH_cloud77.txt  PCA_for_ROPS_cloud77.txt  PCA_for_SHOT_100000_samples.txt  PCA_for_SHOT_80_clouds.txt  PCA_for_SHOT_cloud77.txt  PCA_for_SHOT_cloud77_50_dim.txt  PCA_for_SHOT_cloud77_50_dim.txt~  SparsePCA_for_SHOT_80_clouds_50_dim.txt  SparsePCA_for_SHOT_cloud77.txt  SparsePCA_for_SHOT_cloud77.txt~  fpfh_distribution_cloud0077_0.02_0.10.txt
PCA_matrices/results/: TIME_pca_shot_0.02_0.05.txt  TIME_pca_shot_0.02_0.05.txt~  pcashot_1_05.txt~
include/: header.h
include/pca_rops/: pcarops_bits.h
include/pca_shot/: pcashot_bits.h
pcafpfh/: adaptive_pca_fpfh_for_dataset_evaluation.cpp~  adaptive_pca_fpfh_for_dataset_evaluation_extra1.cpp~  adaptive_pca_fpfh_for_dataset_evaluation_extra2.cpp~  adaptive_pca_fpfh_for_dataset_evaluation_extra3.cpp~  pca_fpfh.cpp  pca_fpfh.cpp~
pcarops/: adaptive_pca_rops_for_dataset_evaluation.cpp~  adaptive_pca_rops_for_dataset_evaluation_extra2.cpp~  adaptive_pca_rops_for_dataset_evaluation_extra3.cpp~  pca_rops.cpp  pca_rops.cpp~
pcashot/: PCA_SHOT.cpp  PCA_SHOT.cpp~  adaptive_pca_shot_for_dataset_evaluation.cpp~  adaptive_pca_shot_for_dataset_evaluation_extra.cpp~  adaptive_pca_shot_for_dataset_evaluation_extra1.cpp~  adaptive_pca_shot_for_dataset_evaluation_extra2.cpp~  special_grids_for_type_shot.cpp~  type_shot.cpp~
(+181 files in other folders)
